--- a/templates/front.html
+++ b/templates/front.html
@@ -7,7 +7,7 @@
     <br><br>
   {% endfor %}
 	<footer>
-		<p class="query">Queried {{ queried_ago }} seconds ago</p>
+		<p class="query">{{ age }}</p>
 	</footer>
 
 {% endblock %}
