--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -3,6 +3,6 @@
 {% block content %}
   {{post.render() | safe}}
 	<footer>
-		<p class="query">Queried {{ queried_ago }} seconds ago</p>
+		<p class="query">{{ age }}</p>
 	</footer>
 {% endblock %}
